--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,4 +4,34 @@
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
+  <servlet>
+  	<servlet-name>ControladorCliente</servlet-name>
+  	<display-name>ControladorCliente</display-name>
+  	<description></description>
+  	<servlet-class>controlador.ControladorCliente</servlet-class>
+  </servlet>
+  <servlet>
+  	<servlet-name>ControladorProducto</servlet-name>
+  	<display-name>ControladorProducto</display-name>
+  	<description></description>
+  	<servlet-class>controlador.ControladorProducto</servlet-class>
+  </servlet>
+  <servlet>
+  	<servlet-name>ControladorUsuario</servlet-name>
+  	<display-name>ControladorUsuario</display-name>
+  	<description></description>
+  	<servlet-class>controlador.ControladorUsuario</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>ControladorCliente</servlet-name>
+  	<url-pattern>/ControladorCliente</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>ControladorProducto</servlet-name>
+  	<url-pattern>/ControladorProducto</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>ControladorUsuario</servlet-name>
+  	<url-pattern>/ControladorUsuario</url-pattern>
+  </servlet-mapping>
 </web-app>
